# ruten

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  ci.yml
examples/: blockchain.rtn  crypto_price.rtn  cryptography.rtn  database.rtn  fibonacci.rtn  geo.rtn  github.rtn  jokes.rtn  logger.rtn  maths.rtn  news.rtn  quickstart.rtn  quotes.rtn  requests.rtn  stats.rtn  strings.rtn  testings.rtn  utils.rtn  webhook.rtn
src/: error.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  repl.rs
src/modules/: ai.rs  apps.rs  blockchain.rs  crypto.rs  crypto_prices.rs  database.rs  downloads.rs  email.rs  facts.rs  format.rs  geo.rs  github.rs  http.rs  image.rs  jokes.rs  json.rs  logger.rs  math.rs  mod.rs  multiproc.rs  news.rs  nlp.rs  quotes.rs  stats.rs  strings.rs  subproc.rs  testing.rs  torrent.rs  utils.rs  vision.rs  weather.rs  webhook.rs
tests/: integration_test.rs
